fix: add `letter-spacing` to text styles

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,7 @@
   --mf-cursor-text-size: 36px;
   --mf-cursor-text-font-size: 16px;
   --mf-cursor-text-line-height: 20px;
+  --mf-cursor-text-letter-spacing: initial;
 
   --mf-cursor-media-size: 400px;
 
@@ -121,6 +122,7 @@
 
     font-size: var(--mf-color-text-font-size, 16px);
     line-height: var(--mf-color-text-line-height, 20px);
+    letter-spacing: var(--mf-color-text-letter-spacing, initial);
     text-align: center;
 
     transition:
